doc:調整忘記密碼的相關swagger註解
